<resources>
    <string name="app_name">Conversor de Temperatura</string>
    <string name="temperature">Temperatura</string>
    <string name="hint_temperature">Digite a temperatura</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="msgCtoF">Realizada a conversão de Celsius para Fahrenheit.</string>
    <string name="msgFtoC">Realizada a conversão de Fahrenheit para Celsius.</string>
    <string name="error_popup_notify">Não foi possivel realizar a conversão de
        temperatura com os dados informados.</string>
</resources>