<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <!-- Definição das guidelines. São guidelines Horizontais
    dividem a tela em 30% e 70% -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <!-- Sera usado uma textView para mostrar a mensagem e um
    edittext para a leitura de dados-->

    <!-- Posição do textView é em relação ao Pai-->

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/baseline_thermostat_24"
        app:layout_constraintEnd_toStartOf="@+id/app_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="109dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textview_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/temperature"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_name"/>

    <EditText
        android:id="@+id/edittext_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_temperature"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_temperature" />
    
    <Button
        android:id="@+id/btn_celsius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/celsius"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_fahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal1"/>

    <Button
        android:id="@+id/btn_fahrenheit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/fahrenheit"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_celsius"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal1"/>

    <Button
        android:id="@+id/btn_kelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/kelvin"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal1" />
    
    <TextView
        android:id="@+id/textview_result_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/output"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
        android:id="@+id/textview_result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/output"
        app:layout_constraintEnd_toEndOf="@id/textview_result_number"
        app:layout_constraintStart_toStartOf="@id/textview_result_number"
        app:layout_constraintTop_toBottomOf="+@id/guideline_horizontal2"/>



</androidx.constraintlayout.widget.ConstraintLayout>